OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Personal_Guarantee_Status__c.field-meta.xml
<CustomField>
    <fullName>Personal_Guarantee_Status__c</fullName>
    <label>Personal Guarantee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>