OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Previous_Status_Before_Override__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status_Before_Override__c</fullName>
    <label>Previous Status Before Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>