OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Program_Territory__c.field-meta.xml
<CustomField>
    <fullName>Program_Territory__c</fullName>
    <formula>TEXT(Account__r.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Territory</label>
    <type>Text</type>
</CustomField>