OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Terms_Conditions_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_Status_TEMP__c</fullName>
    <formula>TEXT( Contract__r.Terms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms Conditions Status (TEMP)</label>
    <type>Text</type>
</CustomField>