OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Territory_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Territory_Assignments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Assignments</label>
    <referenceTo>Territory_Assignments__c</referenceTo>
    <relationshipLabel>Onboarding</relationshipLabel>
    <relationshipName>Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>