OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Vendor_Customization_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Customization_Vertical__c</fullName>
    <formula>Text( Vendor_Customization__r.Business_Vertical__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Customization Vertical</label>
    <type>Text</type>
</CustomField>