OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Vendor_Order_Entry_Setup_Status_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Order_Entry_Setup_Status_TEMP__c</fullName>
    <formula>TEXT( Contract__r.Platform_Setup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Order Entry Status (TEMP)</label>
    <type>Text</type>
</CustomField>