OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Workers_Comp_Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Insurance_Expiration_Date__c</fullName>
    <formula>Dealer_Insurance__r.Workers_Comp_Exp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker&apos;s Comp Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>