OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/fields/Workers_Comp_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Insurance_Status__c</fullName>
    <formula>TEXT( Dealer_Insurance__r.Workers_Comp_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker&apos;s Comp Insurance Status</label>
    <type>Text</type>
</CustomField>