OnboardingV2Minimal/force-app/main/default/objects/Onboarding__c/validationRules/Contract_Opportunity_Consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Opportunity_Consistency</fullName>
    <active>true</active>
    <description>When Contract and Opportunity are both populated, Opportunity must match the Contract's related Opportunity.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Contract__c)),
NOT(ISBLANK(Opportunity__c)),
NOT(ISBLANK(Contract__r.Opportunity_to_Contract__c)),
Opportunity__c &lt;&gt; Contract__r.Opportunity_to_Contract__c
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Opportunity must match the Contract's related Opportunity.</errorMessage>
</ValidationRule>